# ex_srtp

./: .gitignore  Cargo.toml  README.md  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: ex_srtp.ex
lib/ex_srtp/: backend.ex  cipher.ex  context.ex  helper.ex  key_derivation.ex  policy.ex  replay_list.ex  rtcp_context.ex  rtp_context.ex
lib/ex_srtp/backend/: crypto.ex  rust_crypto.ex
lib/ex_srtp/cipher/: aes_cm_hmac_sha1.ex  aes_gcm.ex
native/ex_srtp/: Cargo.toml
native/ex_srtp/.cargo/: config  config.toml
native/ex_srtp/src/: key_derivation.rs  lib.rs  protection_profile.rs  rtcp_context.rs  rtp_context.rs
native/ex_srtp/src/cipher/: aes_cm_hmac_sha1.rs  aes_gcm.rs  mod.rs
native/rustcrypto_nif/: Cargo.toml  README.md
native/rustcrypto_nif/src/: context.rs  key_derivation.rs  lib.rs  rtcp_context.rs  rtp_context.rs
test/: ex_srtp_test.exs
test/ex_srtp/: key_derivation_test.exs  policy_test.exs  replay_list_test.exs
test/ex_srtp/cipher/: aes_gcm_test.ex
