[package]
name = "ex_srtp"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ex_srtp"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
hmac = "0.12.1"
rustler = "0.37.2"

[target.'cfg(windows)'.dependencies]
sha1 = "0.10.6"

[target.'cfg(not(windows))'.dependencies]
sha1 = { version = "0.10.6", features = ["asm"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
graviola = "0.3.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
graviola = "0.3.0"

[features]
default = ["nif_version_2_15"]

nif_version_2_15 = ["rustler/nif_version_2_15"]
